2009-03-14  Stipe Tolj  <stolj at kannel.org>
    * config.rpath: touched file to surporess the configure error.
    * configure[.in], aclocal.m4: added '--enable-auto-import' linker option
      for the Cygwin 1.x platform to avoid warnings at link time.
      
2009-03-14  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: fix missing -liconv flag for gw-config's --libs output. We
      rather use the Makefile variable then the configure substitution, so we
      get all library flags handled.
      
2009-03-13  Stipe Tolj  <stolj at kannel.org>
    * gwlib/date.c, gwlib/dbpool_sqlite3.c, test/test_store_dump.c: fixed 
      minor compiler warnings. NLC.
    * acinclude.m4: changed header to reflect the correct file name. NLC.
    
2009-03-13 Alexander Malysh <amalysh at kannel.org>
    * .cvsignore, Makefile.in, acinclude.m4, aclocal.m4, bootstrap.sh,
      configure, configure.in, gw-config.h.in, gwlib/charset.c: Use already
      defined in gettext AM_ICONV macro to detect and declare iconv. This
      fixes warning about const declaration.
      This macro defined in aclocal and therefore I renamed aclocal.m4 to
      acinclude.m4 and added bootstrap.sh. Please always use bootstrap.sh to
      create new configure script!

2009-03-08  Stipe Tolj  <stolj at kannel.org>
    * install-sh: use a more recent version taken from automake-1.10, in order
      to support wildcard filenames to install. This script is used in case
      the configure run finds no other BSD-compatible install program, i.e.
      required for Solaris 10 that has no such thing.

2009-03-02  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: minor source re-formatting. NLC.
    
2009-03-02 Alexander Malysh <amalysh at kannel.org>
    * gwlib/charset.c: try to convert with iconv harder.

2009-03-01 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: added openjade to search.
      Added /sw /opt/local to search path for docbook.
